@@ -12,6 +12,8 @@ Thu Nov 23 12:20:54 CET 2006 Denis Barbier <barbier@users.sourceforge.net>
 	* src/org/jcae/mesh/amibe/mesher/ds/MMesh1D.java: Replace HashSet
 	and HashMap instances by their Linked* counterpart, so that 1D
 	mesh does not depend on objects location in memory.
+	* src/org/jcae/mesh/amibe/algos3d/SmoothNodes3D.java: Pass options
+	as a map, and add another option to preserve patch boundary.
 
 Wed Nov 22 13:23:40 CET 2006 Denis Barbier <barbier@users.sourceforge.net>
 
